infra/base/apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
  ports:
    - name: http
      port: 8080
      targetPort: http
